fix: preserve entry order in VdfNode.Section
Map.copyOf does not preserve insertion order — it wraps into an
unordered immutable map. Switched to an unmodifiable LinkedHashMap
so libraryfolders.vdf sections iterate in document order, which
downstream index-keyed sections depend on.